fixed a bug that cause the Subscription component to overlap on certain screens.

--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -553,7 +553,7 @@ span.swiper-pagination-bullet{
   }
   .supscription-adjust-input{
     margin-top: 1% !important;
-    width: 110% !important;
+    width: 100% !important;
     margin-left: 10% !important;
   }
 }
